# sentiment-service

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.production  Dockerfile.simple  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/sentiment_service/api/: main.py  schemas.py
src/sentiment_service/models/: model.pkl
src/sentiment_service/training/: train.py
src/tests/: test_api.py  test_training.py
