[tool.poetry]
name = "sentiment-service"
version = "0.1.0"
description = "first production-ready micro-service"
authors = ["Nicholas Miles <nicholas.miles6@gmail.com>"]
readme = "README.md"
packages = [{include = "sentiment_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.7.1"
pandas = "^2.3.1"
mlflow = "^3.2.0"
black = "^25.1.0"
pydantic = "^2.11.7"
fastapi = "^0.116.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.3.0"
pytest = "^8.4.1"
pytest-cov = "^5.0.0"


[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["sentiment_service"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=sentiment_service",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
